# waf

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  fingerproxy.go  flags.go  go.mod  go.sum  waf.toml
.github/workflows/: rust.yml
cmd/: main.go
pkg/: README.md
pkg/fingerprint/: fingerprint.go  header_injector.go
pkg/http2/: server.go
pkg/ja4pcap/: pcap.go
pkg/metadata/: metadata.go
pkg/proxyserver/: proxyserver.go
pkg/reverseproxy/: handler.go
pkg/waf/: handler.go
src/: config.rs  firewall.rs  main.rs  proxy.rs
src/proxy/: lib.rs  mod.rs  websocket.rs
src/waf/: mod.rs  tls_inspector.rs
test/: package-lock.json  package.json  svelte.config.js  vite.config.ts
test/.svelte-kit/: ambient.d.ts
test/.svelte-kit/types/src/routes/: proxy+page.server.ts
test/src/routes/: +page.server.ts  +page.svelte
