[package]
name = "waf"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.13"  # For layered configuration
serde = { version = "1.0", features = ["derive"] }  # For deserialization
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
futures = "0.3"

[dev-dependencies]
tempfile = "3.20.0"  # For creating temporary files in tests