[package]
name = "waf"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.13"  # For layered configuration
num_cpus = "1.17.0"
serde = { version = "1.0", features = ["derive"] }  # For deserialization
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
hyper = { version = "0.14", features = ["full"] }
http = "1"
tokio-tungstenite = "0.27.0"
futures = "0.3.31"
colored = "3.0.0"
uuid = { version = "1.17.0", features = ["v4"] }  # For generating UUIDs
rustls = "0.21"
tokio-rustls = "0.24"
webpki = "0.22"
rustls-pemfile = "1.0"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.20.0"  # For creating temporary files in tests
